# pleonasty

./: .gitignore  README.MD  example_notebook - ChatMode Example.ipynb  example_notebook.ipynb  pyproject.toml
.claude/: settings.local.json
context_examples/: summarize_and_be_funny.csv
src/: pleonasty.py
src/pleonasty/: LLM_Result.py  Pleonast.py  __init__.py  _api_generate.py  _buildPrompt.py  _format_conversation.py  analyze_text.py  batch_analyze_csv_to_csv.py  batch_analyze_to_csv.py  chat_mode.py  cli.py  convert_prompt_to_template_str.py  generate_csv_outputs.py  parse_json_output.py  process_text.py  set_message_contexts.py
