[build-system]

requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"


[project]

name = "pleonasty"

version = "0.1.2"

authors = [
	{ name="Ryan L. Boyd", email="ryan@ryanboyd.io" },
]

description = "A very simple abstraction for LLMs to get single responses to a given input."

readme = "README.MD"

requires-python = ">=3.10"

dependencies=["tqdm>=4.66.5",
				"transformers>=4.44.2",
				"accelerate>=0.33.0",
				"sentencepiece>=0.2.0",
				"protobuf>=5.28.0"]

classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]

Homepage = "https://github.com/ryanboyd/pleonasty"

Issues = "https://github.com/ryanboyd/pleonasty/issues"